include $(srcdir)/../run.mk

TESTS = \
	abi-change \
	conflicts \
	force-downgrade \
	help \
	list-dir \
	multiple-repos \
	new-virtual \
	no-removal \
	optional-installs \
	plan \
	plan-unapproved \
	postinst \
	provides \
	provides-replace \
	reboot \
	reboot-recover-update \
	reinstall-all \
	replan \
	replan-no-effect \
	simple-update \
	steal-confs

AM_TESTS_ENVIRONMENT += export UPDATER_EXEC="$(top_srcdir)/src/pkgupdate/pkgupdate";

